
	* configure.ac: Head is now the future 0.6 branch. Dropped
	`EXMPP_BUILD_ID'. Debug is diabled by default when
	`EXMPP_RELEASE_DATE' is set and enabled otherwise. Comments translated
	in english.

	* include/exmpp.hrl: Add `jabber:iq:privacy', `jabber:iq:roster' and
	`urn:ietf:params:xml:ns:xmpp-session' namespaces.

	* doc/Makefile.am: Clean stylesheet.css if it was copied at compile
	time.

2006-10-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* priv/lib/Makefile.am: Copies of stringprep_drv.so,
	tls_drv.so and iconv_erl.so are useless, because they're not tested by
	the current testsuite.

	* include/exmpp.hrl: Corrections in comments.

	* src/exmpp_jlib.erl, src/jlib.erl, src/Emakefile.ini,
	src/Makefile.am: As we did with `exmpp_xml' and `xml', we split
	`exmpp_jlib' in `exmpp_jlib' and `jlib' to separate the old code with
	the new one. Because this module didn't received a lot of
	modifications and testing, we took this opportunity to import the last
	version of `jlib' from today's ejabberd repository.

	* src/exmpp_xml.erl, configure.ac: Add a compile-time flag to enable a
	workaround for `erl_ddll' reference count bug.

	* configure.ac, c_src/Makefile.am, ebin/Makefile.am: Add a flag to
	disable the compatibility modules.

	* ebin/exmpp.app.in, ebin/exmpp.appup.in: Application file and upgrade
	file update.

	* configure.ac, src/Emakefile.in, ebin/exmpp.app.in: If compatibility
	modules are disabled, don't build/list them.

2006-10-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl (start_parser): Unload driver if an error occurs
	with options handling.
	(stop_parser): Don't catch exceptions with port_close/1; the caller is
	responsible for catching them if he wants.

2006-10-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Préparation de la release 0.5.3.

	* ebin/exmpp.appup.in: Instructions de mise à jour depuis la version
	0.5.2.
